# TheMusicQuizBot

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
audios/: defaults.py  encode_to_ogg.py
handlers/: __init__.py  data_consent_model.py  error.py  message_handlers.py  role_check.py
handlers/student/: registration.py  victoryna.py
handlers/teacher/: done.py  main_menu.py
handlers/teacher/audio/: add.py  delete.py  edit.py  get.py  my_audios.py
handlers/teacher/victoryna/: create.py  delete.py  edit.py  get.py  launch.py  my_victorynas.py
logs/: mylogging.py
settings/: app.py  settings.py
utils/: button_dialog_model.py  button_dialog_model2.py  general_keyboard.py  helpers.py  parse_data_for_teacher.py
